use loadSheet(2000,2000) in wiz doc, make it easy to modify width and height. modify help.txt.

--- a/WizSheet/wizsheet.htm
+++ b/WizSheet/wizsheet.htm
@@ -71,7 +71,7 @@
                     + template_path + "wizsheet/jquery.sheet/plugins/jquery.sheet.dts.min.js\"><\/script><script src=\""
                     + template_path + "wizsheet/jquery.sheet/plugins/ZeroClipboard.min.js\"><\/script><script src=\""
                     + template_path + "wizsheet/wizsheet.js\"><\/script>"
-                    + "<script type=\"text/javascript\"> $(function() { loadSheet(); });"
+                    + "<script type=\"text/javascript\"> $(function() { loadSheet(2000, 2000); });"
                     + "<\/script>"
                     + "<meta http-equiv='Content-Type' content='text/html; charset=utf-8'><title>"
                     + title + "</title>" + htmltext + "<!--WizHtmlContentEnd--></body></html>";
