get img src by getElementsByTagName

--- a/SaveHistory/commit.htm
+++ b/SaveHistory/commit.htm
@@ -134,9 +134,9 @@ hr {
 		objApp.Window.CloseHtmlDialog(WizChromeBrowser, "cancel");
 	}
 	
-	function getMarkdownContent(html, text, url_base)
+	function getMarkdownContent(pluginPath, work_dir, html, text, url_base)
 	{
-	    return InsertPicture(html, text, url_base);
+	    return InsertPicture(pluginPath, work_dir, html, text, url_base);
 	}
 	
 	function Commit() 
@@ -153,15 +153,13 @@ hr {
 		
 		var file_path = CombinePath(work_dir, file_name);
 		var pic_path = "images/"+objDoc.Title;
-		var markdown_content = getMarkdownContent(objDoc.GetHtml(), objDoc.GetText(0), pic_path);
+		var markdown_content = getMarkdownContent(pluginPath, work_dir, objDoc.GetHtml(), objDoc.GetText(0), pic_path);
 		try {
 		    objComm.SaveTextToFile(file_path, markdown_content, "UTF-8");
 		}catch (e) {
 		    alert("Write file (" + file_path + ") failed!");
 			return;
 		}
-		var image_dst_path = CombinePath(work_dir, pic_path)
-		CopyPictures(objDoc, image_dst_path);
 		objComm.RunExe(pluginPath + commit_cmd, "\""+ tool_path + "\" \""+work_dir + "\" \"" + textComment.value + "\"", true);  // return 0 - sucsess
     }
 
