--- a/SaveHistory/commit.htm
+++ b/SaveHistory/commit.htm
@@ -123,67 +123,26 @@ hr {
 <script language="JavaScript" type="text/javascript">
 	var objApp = window.external; 
 	var objComm = objApp.CreateWizObject("WizKMControls.WizCommonUI");
+	var objWindow = objApp.Window;
+	var objDoc = objWindow.CurrentDocument; //获得当前正在浏览的Wiz文档(WizDocument)
 	
-	function closeDialogWhenOk()
-	{
-	    var objWindow = objApp.Window;
-	    var objDoc = objWindow.CurrentDocument; //获得当前正在浏览的Wiz文档(WizDocument)
-				
-		var pluginPath = objApp.AppPath+"Plugins\\Save.History\\";//objApp.GetPluginPathByScriptFileName("SaveHistory.js");
-		var tool_path = objApp.LoadStringFromFile(pluginPath+"config.ini","tool_path");
-	    var work_dir = objApp.LoadStringFromFile(pluginPath+"config.ini","work_dir");
-		var commit_cmd = objApp.LoadStringFromFile(pluginPath+"config.ini","commit_cmd");
-		
-		var pic_path = "images/"+objDoc.Title;
-    	var image_dst_path = CombinePath(work_dir, pic_path)
-		CopyPictures(objDoc, image_dst_path);
-		objComm.RunExe(pluginPath + commit_cmd, "\""+ tool_path + "\" \""+work_dir + "\" \"" + textComment.value + "\"", true);  // return 0 - sucsess
-
-	    objApp.Window.CloseHtmlDialog(WizChromeBrowser, "ok");
-	}
+	var pluginPath = objApp.AppPath+"Plugins\\Save.History\\";//objApp.GetPluginPathByScriptFileName("SaveHistory.js");
+	
+	var file_name = objDoc.Title; 
+	var tool_path = objApp.LoadStringFromFile(pluginPath+"config.ini","tool_path");
+	var work_dir = objApp.LoadStringFromFile(pluginPath+"config.ini","work_dir");
+	var commit_cmd = objApp.LoadStringFromFile(pluginPath+"config.ini","commit_cmd");
+	
+	var file_path = CombinePath(work_dir, file_name);
+	var pic_path = "images/"+objDoc.Title;
 		
 	function okClicked() {
-	    Commit();
-		setTimeout(closeDialogWhenOk, 1000); // close after save finished, about 1 second
+		ConstructMarkdownContentAndSave(textComment.value, objDoc.GetHtml(), objDoc.GetText(0));
     }
 	function cancelClicked() {
 		//alert(objApp.LoadPluginString2(WizChromeBrowser, "Cancel clicked"));
 		objApp.Window.CloseHtmlDialog(WizChromeBrowser, "cancel");
 	}
-	
-	function saveMarkdownContent(pluginPath, work_dir, file_path, commit_cmd, tool_path, comment, html, text, url_base)
-	{
-	    ConstructMarkdownContentAndSave(pluginPath, work_dir, file_path, commit_cmd, tool_path, comment, html, text, url_base);
-	}
-	
-	function Commit() 
-	{    	        		
-		var objWindow = objApp.Window;
-		var objDoc = objWindow.CurrentDocument; //获得当前正在浏览的Wiz文档(WizDocument)
-		
-		var pluginPath = objApp.AppPath+"Plugins\\Save.History\\";//objApp.GetPluginPathByScriptFileName("SaveHistory.js");
-		
-		var file_name = objDoc.Title; 
-		var tool_path = objApp.LoadStringFromFile(pluginPath+"config.ini","tool_path");
-		var work_dir = objApp.LoadStringFromFile(pluginPath+"config.ini","work_dir");
-		var commit_cmd = objApp.LoadStringFromFile(pluginPath+"config.ini","commit_cmd");
-		
-		var file_path = CombinePath(work_dir, file_name);
-		var pic_path = "images/"+objDoc.Title;
-		saveMarkdownContent(pluginPath, work_dir, file_path, commit_cmd, tool_path, textComment.value, objDoc.GetHtml(), objDoc.GetText(0), pic_path);
-    }
-
-    function CloseDialog(ret) 
-	{
-        if (ret == 1) 
-		{
-            Commit();
-        }
-        
-		//var objApp = new ActiveXObject("WizExplorer.WizExplorerApp");
-		var objApp = window.external;
-        objApp.Window.CloseHtmlDialog(document, ret);
-    }
 </script>    
 
 </body>
